add user interface

--- a/index.html
+++ b/index.html
@@ -1,14 +1,62 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Игра в кости</title>
+  </head>
+  <body>
     
+  <div class="container">
+    <div class="row-title">
+      <h1><span class="badge badge-primary">Game of dice</span></h1>
+      <h2><span class="badge badge-success" id="userName">---</span></h2>
+    </div>
+    <div class="row-title">
+      <div class="row"class="user-info" id="userInfo">
+        <div class="col"class="user-name" id="userSteps">---</div>
+        <div class="col"class="user-budget" id="userBudget">---</div>
+        <div class="col" class="user-maxbudget" id="userMaxBudget">---</div>
+      </div>
+    </div>
 
-<script src="./js/app.js"></script>
-</body>
+        <div class="alert alert-success" role="alert" id="message">
+          Сделайте первую ставку и нажмите "играть"
+        </div>
+         
+        <form>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="inputBet" id="betLabel">---</label>
+              <input type="number" min=0 max=1 value="1" class="form-control" id="inputBet">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="inputNumber" id="numberLabel">Загадайте число (от 1 до 12)</label>
+              <select id="inputNumber" class="form-control">
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                  <option value="6">6</option>
+                  <option value="7">7</option>
+                  <option value="8">8</option>
+                  <option value="9">9</option>
+                  <option value="10">10</option>
+                  <option value="11">11</option>
+                  <option value="12">12</option>
+              </select>
+            </div>
+          </div>
+          <button type="button" class="btn btn-success" id="game" value="Click">Играть</button>
+          <!-- <button type="button" class="btn btn-danger" id="newGame">Новая игра</button> -->
+        </form>
+  </div>
+ 
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="./js/app.js"></script>
+  </body>
 </html>
